[tool.poetry]
name = "spacyexample"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
spacy = "^2.3.1"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[tool.poetry.dependencies.en_core_web_sm]
url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.3.1/en_core_web_sm-2.3.1.tar.gz"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

